--- a/server/public/index.html
+++ b/server/public/index.html
@@ -50,11 +50,13 @@
     <div class="stretchGoal">
         <div>
             <h3 class="displayScreen">
-                <span id="firstValue"></span> 
+                <span id="firstValue"></span>
                 <span id="mathSymbol"></span>
                 <span id="secondValue"></span>
-                <button id="clearBtn" class="btn">C</button>
             </h3>
+            <div>
+                <button id="clearBtn" class="btn">C</button>
+            </div>
         </div>
         <div>
         <div class="rowOfBtns">
