Update from base mode to stretch

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -50,13 +50,14 @@
     <div class="stretchGoal">
         <div>
             <h3 class="displayScreen">
-                <span id="firstValue"></span>
+                <span id="firstValue" class="clearInput"></span>
                 <span id="mathSymbol"></span>
-                <span id="secondValue"></span>
-            </h3>
-            <div>
+                <span id="secondValue" class="clearInput"></span>
                 <button id="clearBtn" class="btn">C</button>
-            </div>
+            </h3>
+            <!-- <div>
+                <button id="clearBtn" class="btn">C</button>
+            </div> -->
         </div>
         <div>
         <div class="rowOfBtns">
@@ -85,7 +86,7 @@
         </div>
     </div> 
 
-    <div>
+    <div class="mathematicalHistory">
         <h2 id="displayAnswer"></h2>
         <ul id="displayHistory">
         </ul>
