--- a/server/public/index.html
+++ b/server/public/index.html
@@ -53,7 +53,7 @@
                 <span id="firstValue" class="clearInput"></span>
                 <span id="mathSymbol"></span>
                 <span id="secondValue" class="clearInput"></span>
-                <button id="clearBtn" class="btn">C</button>
+                <button id="clearBtn">C</button>
             </h3>
             <!-- <div>
                 <button id="clearBtn" class="btn">C</button>
