Update clearButton & add notes

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -51,7 +51,7 @@
         <div>
             <h3 class="displayScreen">
                 <span id="firstValue" class="clearInput"></span>
-                <span id="mathSymbol"></span>
+                <span id="mathSymbol" class="clearInput"></span>
                 <span id="secondValue" class="clearInput"></span>
                 <button id="clearBtn">C</button>
             </h3>
